# stm32_template

./: .gitignore  .mxproject  CMakeLists.txt  STM32F407XX_FLASH.ld  main.cpp  main.hpp  test.ioc
.deps/freertos-build/: cmake_install.cmake
.deps/freertos-build/include/: cmake_install.cmake
.deps/freertos-build/portable/: cmake_install.cmake
.deps/freertos-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
.deps/freertos-subbuild/freertos-populate-prefix/src/freertos-populate-stamp/: freertos-populate-gitinfo.txt  freertos-populate-update-info.txt
.deps/freertos-subbuild/freertos-populate-prefix/tmp/: freertos-populate-gitclone.cmake  freertos-populate-gitupdate.cmake  freertos-populate-mkdirs.cmake
.github/workflows/: ci.yml  release.yml
Config/: CMakeLists.txt
Config/include/: FreeRTOSConfig.h
Core/Src/: main.c  stm32f4xx_it.c
Src/: AppManager.cpp  CMakeLists.txt
cmake/: catch2.cmake  cmsis5.cmake  cmsis_device.cmake  etl.cmake  freertos.cmake  gtest.cmake  hal.cmake  stm32cubef4.cmake  systemview.cmake
cmake/stm32cubemx/: CMakeLists.txt
script/: hal.sh
